<resources>
    <string name="app_name" translatable="false">Aucards</string>
    <string name="add_card">Add new card</string>
    <string name="save">Save</string>
    <string name="empty_list_prompt">Create your first card!</string>
    <string name="your_text">Your text…</string>
    <string name="description">Additional text…</string>
    <string name="choose_color">Choose color</string>
    <string name="delete">Delete card</string>
    <string name="edit">Edit cards</string>
    <string name="open_settings">Open settings</string>
    <string name="settings">Settings</string>
    <string name="go_back">Go back</string>
    <string name="about" translatable="false">Aucards\nVadim Erenkov © %s\nv. %s</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="device">Device</string>
    <string name="english" translatable="false">English</string>
    <string name="french" translatable="false">Français</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="ukrainian" translatable="false">Українська</string>
    <string name="georgian" translatable="false">ქართული</string>
    <string name="polish" translatable="false">Polski</string>
    <string name="portuguese_brazil" translatable="false">Português (Brasil)</string>
    <string name="spanish" translatable="false">Español</string>
    <string name="brightness">Set brightness to max</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="source_code">Source code:</string>
    <string name="source_code_link" translatable="false">https://github.com/vadimerenkov/Aucards</string>
    <string name="patreon_link" translatable="false">https://ko-fi.com/vadimerenkov</string>
    <string name="portfolio_link" translatable="false">https://readymag.website/u257758645/5213733/</string>
    <string name="selected_number">Selected: %s</string>
    <string name="delete_button">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="translator">Translator: %your name%</string>
    <string name="landscape">Switch to landscape mode</string>
    <string name="all_cards">All cards</string>
    <string name="favourites">Favourites</string>
    <string name="mark_as_favourite">Mark as favourite</string>
    <string name="add_to_fav_prompt">Add any card to favourites to see it here!</string>
    <string name="brightness_permission">This option requires app permission to write system settings.</string>
    <string name="palette">Palette</string>
    <string name="custom_color">Custom</string>
    <string name="import_cards">Import cards from file</string>
    <string name="export">Export cards to file</string>
    <string name="settings_play_sound">Play a sound</string>
    <string name="play_sound_description">Play a ringtone to let others know you want to say something.</string>
    <string name="ringtone">Ringtone:</string>
    <string name="choose_ringtone">Choose a ringtone</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="logo" translatable="false">logo:</string>
    <string name="designer" translatable="false">Olga Prilutskaia </string>
    <string name="title_subtitle">Title and description</string>
    <string name="two_halves">Two equal titles</string>
    <string name="text_size">Text size</string>
    <string name="layout">Layout</string>
    <string name="change_image">Change image</string>
    <string name="remove_image">Remove image</string>
    <string name="opacity">Text background opacity:</string>
    <string name="choose_image">Choose image</string>
    <string name="export_error">Could not export the cards. Error code: %d</string>
    <string name="import_error">Could not load the cards. Error code: %d</string>
    <string name="image_error">Could not save the image. Error code: %d</string>
    <string name="copy_selected">Duplicate selected cards</string>
    <string name="support">Support the developer:</string>
    <string name="choose_card">Choose a card:</string>
    <string name="when_opening_the_card">When opening the card:</string>

    <plurals name="import_success">
        <item quantity="one">Successfully imported %d new card!</item>
        <item quantity="other">Successfully imported %d new cards!</item>
    </plurals>
    <plurals name="export_success">
        <item quantity="one">Successfully exported %d card!</item>
        <item quantity="other">Successfully exported %d cards!</item>
    </plurals>
    <plurals name="number_deleted">
        <item quantity="one">Deleted %d card.</item>
        <item quantity="other">Deleted %d cards.</item>
    </plurals>
    <plurals name="delete_confirmation">
        <item quantity="one">Are you sure you want to delete this card?</item>
        <item quantity="other">Are you sure you want to delete %s cards?</item>
    </plurals>
    <string name="title_activity_widget_configure">WidgetConfigureActivity</string>
    <string name="open_menu">Open menu</string>
    <string name="choose_categories">Choose categories</string>
    <string name="new_category">New category</string>
    <string name="all">All</string>
    <string name="category_name">Category name</string>
    <string name="rename">Rename</string>
    <string name="delete_category">Delete</string>
    <string name="delete_category_confirmation">Are you sure you want to delete category \"%s\"? Cards in this category will not be deleted.</string>
    <string name="categories">Categories</string>
    <string name="no_cards_in_category">There are no cards in \"%s\".</string>
    <string name="play_tts">Voice the card text with Google Text-To-Speech tool</string>
</resources>
